# repo-cli

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: auto-release.yml  release.yml
src/: config.rs  lib.rs  main.rs  models.rs  terminal.rs
src/ai/: claude.rs  codex.rs  gemini.rs  mod.rs  provider.rs
src/commit/: config.rs  mod.rs  tui.rs
src/craft/: actions.rs  execute.rs  mod.rs  split.rs  tui.rs
src/explore/: ai.rs  highlight.rs  layout.rs  mod.rs  overlay.rs  tui.rs
src/explore/branches/: actions.rs  compare.rs  mod.rs  tree.rs
src/explore/history/: blame.rs  filters.rs  mod.rs  search.rs
src/git/: branches.rs  commit_ops.rs  commits.rs  diff.rs  fetch.rs  github.rs  mod.rs  repo.rs  stash.rs  status.rs
src/init/: detect.rs  mod.rs  prompt.rs  templates.rs
src/release/: gh_cli.rs  mod.rs
src/render/: graph.rs  mod.rs  stat.rs  tui.rs
src/reword/: mod.rs  picker.rs  rebase.rs
src/update/: github.rs  installer.rs  mod.rs  version.rs
src/workspace/: filter.rs  groups.rs  mod.rs  render.rs  scan.rs
src/workspace/tui/: dashboard.rs  feed.rs  mod.rs  picker.rs
