[package]
name = "repo-cli"
version = "0.1.0"
edition = "2021"
description = "A minimal git summary for your terminal"
authors = ["K-NRS"]
license = "MIT"
repository = "https://github.com/K-NRS/repo-cli"

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
git2 = "0.18"
ratatui = "0.25"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
anyhow = "1"
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
