[package]
name = "repo-cli"
version = "0.3.0"
edition = "2021"
description = "A minimal git summary for your terminal"
authors = ["K-NRS"]
license = "MIT"
repository = "https://github.com/K-NRS/repo-cli"

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
ratatui = "0.25"
crossterm = "0.27"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
anyhow = "1"
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
semver = "1"
indicatif = "0.17"
flate2 = "1"
zip = "2"
tar = "0.4"
